Start Category III, Finish till Best Voice Actor (Male)

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -45,7 +45,8 @@ published: true
     <div>
     [Category III: Audiovisual Awards](#category-iii-audiovisual-awards)
     - [Best Character Design](#best-character-design)
-    - [Best Voice Actor](#best-voice-actor)
+    - [Best Voice Actor (Female)](#best-voice-actor-female)
+    - [Best Voice Actor (Male)](#best-voice-actor-male)
     - [Best Animation](#best-animation)
     - [Best Art Diretion](#best-art-direction)
     - [Best Director](#best-director)
@@ -602,6 +603,98 @@ published: true
 <div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-fantasy-peoples-choice.webp" />
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-fantasy-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+# Category III: Audiovisual Awards
+
+## Best Character Design
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-2 place-items-start">
+
+    <li>Yuuhei Murota, Momoco <br /> _Alya Sometimes Hides Her Feelings in Russian_ <sup>[<a href="https://myanimelist.net/anime/54744/Tokidoki_Bosotto_Russia-go_de_Dereru_Tonari_no_Alya-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162804/Tokidoki-Bosotto-Russiago-de-Dereru-Tonari-no-Alyasan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yoko Ito, Araya <br /> _Delico’s Nursery_ <sup>[<a href="https://myanimelist.net/anime/56179/Delicos_Nursery" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167991/Delicos-Nursery/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yasushi Nishiya, Saki Takahashi <br /> _The Elusive Samurai_ <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Tetsuya Kawakami, Imigi Muru, Yuu Saitou <br /> _Too Many Losing Heroines_ <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Nari Teshima <br /> _Girls Band Cry_ <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Junichirou Taniguchi, Popman365, Chiaki Nakajima, Shuri <br /> _Jellyfish Can’t Swim in the Night_ <sup>[<a href="https://myanimelist.net/anime/54839/Yoru_no_Kurage_wa_Oyogenai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163078/Yoru-no-Kurage-wa-Oyogenai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Nari Teshima, _Girls Band Cry_
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-character-design-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Voice Actor (Female)
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-2 place-items-start">
+
+    <li>**Rika Fukami** <sup>[<a href="https://myanimelist.net/people/436/Rica_Fukami" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/95436/Rica-Fukami" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Deathtopia <br /> _Monogatari: Off & Monster Season_ <sup>[<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Shion Wakayama** <sup>[<a href="https://myanimelist.net/people/35511/Shion_Wakayama" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/148220/Shion-Wakayama" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Momo Ayase <br /> _Dandadan_ <sup>[<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Ayane Sakura** <sup>[<a href="https://myanimelist.net/people/11622/Ayane_Sakura" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/106622/Ayane-Sakura" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Awayuki Kokorone <br /> _VTuber Legend_ <sup>[<a href="https://myanimelist.net/anime/54284/VTuber_Nandaga_Haishin_Kiri_Wasuretara_Densetsu_ni_Natteta" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/160488/VTuber-nanda-ga-Haishin-Kiri-Wasuretara-Densetsu-ni-Natteta/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Sayaka Senbongi** <sup>[<a href="https://myanimelist.net/people/25167/Sayaka_Senbongi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/119616/Sayaka-Senbongi" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Marcille Donato <br /> _Delicious in Dungeon_ <sup>[<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Chika Anzai** <sup>[<a href="https://myanimelist.net/people/11030/Chika_Anzai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/106030/Chika-Anzai" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Sirius <br /> _Re:Zero S3_ <sup>[<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Rina** <sup>[<a href="https://myanimelist.net/people/66027/Rina" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/306615/Rina" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Nina Iseri <br /> _Girls Band Cry_ <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Ayane Sakura as Awayuki Kokorone, _VTuber Legend_
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-voice-actor-female-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Voice Actor (Male)
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>**Kouhei Amasaki** <sup>[<a href="https://myanimelist.net/people/38438/Kouhei_Amasaki" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/119871/Kouhei-Amasaki" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Masachika Kuze <br /> _Alya Sometimes Hides Her Feelings in Russian_ <sup>[<a href="https://myanimelist.net/anime/54744/Tokidoki_Bosotto_Russia-go_de_Dereru_Tonari_no_Alya-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162804/Tokidoki-Bosotto-Russiago-de-Dereru-Tonari-no-Alyasan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Daishi Kajita** <sup>[<a href="https://myanimelist.net/people/57949/Daishi_Kajita" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/195176/Daishi-Kajita" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Hibiki Sakurama <br /> _Go! Go! Loser Ranger_ <sup>[<a href="https://myanimelist.net/anime/53770/Sentai_Daishikkaku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/158417/Sentai-Daishikkaku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Takeo Ootsuka** <sup>[<a href="https://myanimelist.net/people/48047/Takeo_Ootsuka" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/128426/Takeo-Ootsuka" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Oushi Ashioki <br /> _A Sign of Affection_ <sup>[<a href="https://myanimelist.net/anime/55866/Yubisaki_to_Renren" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166794/Yubisaki-to-Renren/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Taito Ban** <sup>[<a href="https://myanimelist.net/people/47739/Taito_Ban" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/151336/Taito-Ban" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Sung Jinwoo <br /> _Solo Leveling_ <sup>[<a href="https://myanimelist.net/anime/52299/Ore_dake_Level_Up_na_Ken" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151807/Ore-dake-Level-Up-na-Ken/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Mutsuki Iwanaka** <sup>[<a href="https://myanimelist.net/people/44320/Mutsuki_Iwanaka" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/129952/Mutsuki-Iwanaka" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Tsunehiro Sasaki <br /> _Negative Positive Angler_ <sup>[<a href="https://myanimelist.net/anime/59425/NegaPosi_Angler" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/179919/NegaPosi-Angler/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>**Jun Fukuyama** <sup>[<a href="https://myanimelist.net/people/86/Jun_Fukuyama" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/staff/95086/Jun-Fukuyama" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> as Hoshihase <br /> _Ishura_ <sup>[<a href="https://myanimelist.net/anime/54449/Ishura" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/161476/Ishura/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Kouhei Amasaki as Masachika Kuze, _Alya Sometimes Hides Her Feelings in Russian_
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-voice-actor-male-jury-choice.webp" />
 </div>
 
 <hr className="my-0 mt-2 mb-4" />
