Complete till Category III: Best Sound

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -125,7 +125,7 @@ published: true
     <li><a href="https://myanimelist.net/character/193134/Saki_Ayase" target="_blank" rel="noopener noreferrer">Saki Ayase</a>, Days with My Stepsister</li>
     <li><a href="https://myanimelist.net/character/177491/Yoichi_Isagi" target="_blank" rel="noopener noreferrer">Yoichi Isagi</a>, Blue Lock</li>
     <li><a href="https://myanimelist.net/character/120015/Kumiko_Oumae" target="_blank" rel="noopener noreferrer">Kumiko Oumae</a>, Sound! Euphonium S3</li>
-    <li><a href="https://myanimelist.net/character/22050/Nadeko_Sengoku" target="_blank" rel="noopener noreferrer">Nadeko Sengoku</a>, Monogatari Series: OFF & MONSTER Season</li>
+    <li><a href="https://myanimelist.net/character/22050/Nadeko_Sengoku" target="_blank" rel="noopener noreferrer">Nadeko Sengoku</a>, Monogatari Series: OFF & Monster Season</li>
     <li><a href="https://myanimelist.net/character/230309/Nina_Iseri" target="_blank" rel="noopener noreferrer">Nina Iseri</a>, Girls' Band Cry</li>
 </ul>
 
@@ -695,6 +695,138 @@ published: true
 
 <div className="grid grid-cols-1 gap-2 place-items-center">
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-voice-actor-male-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Animation
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Yuuta Yamazaki, Yasushi Nishiya, and team <br /> _The Elusive Samurai_ <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Megumi Ishitani, Keisuke Mori, and team <br /> _One Piece (Egghead Arc)_ <sup>[<a href="https://myanimelist.net/anime/21/One_Piece" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/21/ONE-PIECE/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Toshiyuki Kubooka, Ayumi Kurashima, and team <br /> _Shangri-la Frontier S2_ <sup>[<a href="https://myanimelist.net/anime/58572/Shangri-La_Frontier__Kusoge_Hunter_Kamige_ni_Idoman_to_su_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/176508/ShangriLa-Frontier-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Daisuke Hiramaki, Kanna Hirayama, and team <br /> _Oshi no Ko S2_ <sup>[<a href="https://myanimelist.net/anime/55791/Oshi_no_Ko_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166531/Oshi-no-Ko-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yoshihiro Miyajima, Naoki Takeda, and team <br /> _Delicious in Dungeon_ <sup>[<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Tatsuya Ishihara, Kazumi Ikeda, and team <br /> _Sound! Euphonium S3_ <sup>[<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Yuuta Yamazaki, Yasushi Nishiya, and team, _The Elusive Samurai_
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-animation-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Art Direction
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Kentarou Izumi <br /> _Delico’s Nursery_ <sup>[<a href="https://myanimelist.net/anime/56179/Delicos_Nursery" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167991/Delicos-Nursery/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+    
+    <li>Yuuji Kaneko <br /> _Jellyfish Can’t Swim in the Night_ <sup>[<a href="https://myanimelist.net/anime/54839/Yoru_no_Kurage_wa_Oyogenai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163078/Yoru-no-Kurage-wa-Oyogenai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Ayumi Kojima <br /> _The Elusive Samurai_ <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Akira Itou <br /> _Shoshimin: How to Become Ordinary_ <sup>[<a href="https://myanimelist.net/anime/57810/Shoushimin_Series" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173295/Shoushimin-Series/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yumiko Kuga, Takumi Onitani <br /> _The Magical Girl and the Evil Lieutenant Used to be Archenemies_ <sup>[<a href="https://myanimelist.net/anime/57217/Katsute_Mahou_Shoujo_to_Aku_wa_Tekitai_shiteita" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170938/Katsute-Mahou-Shoujo-to-Aku-wa-Tekitai-Shite-Ita/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yoshio Tanioka <br /> _Bleach: Thousand Year Blood War, Part 3_ <sup>[<a href="https://myanimelist.net/anime/56784/Bleach__Sennen_Kessen-hen_-_Soukoku-tan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/169755/BLEACH-Sennen-Kessenhen--Soukokutan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Yuuji Kaneko, _Jellyfish Can’t Swim in the Night_
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-art-direction-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Director
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Fuuga Yamashiro <br /> _Dandadan_ <sup>[<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Tatsuya Yoshihara <br /> _Wistoria: Wand and Sword_ <sup>[<a href="https://myanimelist.net/anime/58059/Tsue_to_Tsurugi_no_Wistoria" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/174576/Tsue-to-Tsurugi-no-Wistoria/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Toshifumi Akai <br /> _Delicious in Dungeon_ <sup>[<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Shotaro Kitamura <br /> _Too Many Losing Heroines_ <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Megumi Ishitani <br /> _One Piece (Egghead Arc)_ <sup>[<a href="https://myanimelist.net/anime/21/One_Piece" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/21/ONE-PIECE/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yuuta Yamazaki <br /> _The Elusive Samurai_ <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yoshiaki Kyougoku <br /> _Yatagarasu_ <sup>[<a href="https://myanimelist.net/anime/56980/Karasu_wa_Aruji_wo_Erabanai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170503/Karasu-wa-Aruji-wo-Erabanai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Mamoru Kanbe <br /> _Shoshimin: How to Become Ordinary_ <sup>[<a href="https://myanimelist.net/anime/57810/Shoushimin_Series" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173295/Shoushimin-Series/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yuuta Murano <br /> _A Sign of Affection_ <sup>[<a href="https://myanimelist.net/anime/55866/Yubisaki_to_Renren" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166794/Yubisaki-to-Renren/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Akiyo Oohashi <br /> _The Magical Girl and the Evil Lieutenant Used to be Archenemies_ <sup>[<a href="https://myanimelist.net/anime/57217/Katsute_Mahou_Shoujo_to_Aku_wa_Tekitai_shiteita" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170938/Katsute-Mahou-Shoujo-to-Aku-wa-Tekitai-Shite-Ita/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Midori Yoshizawa <br /> _Monogatari: Off & Monster Season_ <sup>[<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Souta Ueno <br /> _Days with My Stepsister_ <sup>[<a href="https://myanimelist.net/anime/52481/Gimai_Seikatsu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/152681/Gimai-Seikatsu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Souta Ueno, _Days with My Stepsister_
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-director-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Best Sound
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Noriyoshi Konuma, CITOCA <br /> _Days with My Stepsister_ <sup>[<a href="https://myanimelist.net/anime/52481/Gimai_Seikatsu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/152681/Gimai-Seikatsu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Takatoshi Hamano, Shunsuke Wada <br /> _Delico’s Nursery_ <sup>[<a href="https://myanimelist.net/anime/56179/Delicos_Nursery" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167991/Delicos-Nursery/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Eriko Kimura, Kensuke Ushio <br /> _Dandadan_ <sup>[<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Hiroto Morishita, Yuuki Hayashi <br /> _Wistoria: Wand and Sword_ <sup>[<a href="https://myanimelist.net/anime/58059/Tsue_to_Tsurugi_no_Wistoria" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/174576/Tsue-to-Tsurugi-no-Wistoria/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Kouhei Yoshida, Kana Utatane <br /> _Too Many Losing Heroines_ <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Keiichirou Miyoshi, Yusuke Tanaka, Togenashi Togeari <br /> _Girls Band Cry_ <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Hiroto Morishita, Yuuki Hayashi, _Wistoria: Wand and Sword_
+
+<div className="grid grid-cols-1 gap-2 place-items-center">
+    <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-sound-jury-choice.webp" />
 </div>
 
 <hr className="my-0 mt-2 mb-4" />
