Complete Best MV and Best Opening

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -829,4 +829,85 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-sound-jury-choice.webp" />
 </div>
 
+<hr className="my-4" />
+
+## Best Music Video
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li><a href="https://www.youtube.com/watch?v=QDCe1_SzHAc" target="_blank" rel="noopener noreferrer">"Utakata"</a> <br /> Rapparu, Snail’s House</li>
+
+    <li><a href="https://www.youtube.com/watch?v=E7FU_mqhFGk" target="_blank" rel="noopener noreferrer">"Neverender"</a> <br /> Masanobu Hiraoka, Justice, Tame Impala</li>
+
+    <li><a href="https://www.youtube.com/watch?v=y7fu_nNQAEQ" target="_blank" rel="noopener noreferrer">"Donut Hole"</a> <br /> Takahiro Chiba, Hachi (Kenshi Yonezu)</li>
+
+    <li><a href="https://www.youtube.com/watch?v=4gzhrPEDFis" target="_blank" rel="noopener noreferrer">"Owaranai Love Song wo"</a> <br /> Yoshiki Imazu, Meychan</li>
+
+    <li><a href="https://www.youtube.com/watch?v=QfGuQELt1Tk" target="_blank" rel="noopener noreferrer">"Dead Ma’am’s Chest"</a> <br /> Tease, Houshou Marine</li>
+
+    <li><a href="https://www.youtube.com/watch?v=sZ1OD0cL6Qw" target="_blank" rel="noopener noreferrer">"Arknights 2024 Commemorative PV"</a> <br /> Hiromatsu Shuu, Mili</li>
+
+</ul>
+
+**Winner**
+
+- **Jury Choice:** Arknights 2024 Commemorative PV, Hiromatsu Shuu, Mili
+
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-music-video-jury-choice.webp" />
+    <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/sZ1OD0cL6Qw" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+</div>
+
+<hr className="my-4" />
+
+## Best Opening
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Kaiju No. 8 <sup>[<a href="https://myanimelist.net/anime/52588/Kaijuu_8-gou" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153288/Kaijuu-8gou/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Abyss**" <sup>[<a href="https://www.youtube.com/watch?v=CFjI21M9wZs" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=LYabT4zZnJQ" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Kouhei Nakajima, Yungblud</li>
+
+    <li>Mashle S2 <sup>[<a href="https://myanimelist.net/anime/55813/Mashle__Shinkakusha_Kouho_Senbatsu_Shiken-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166610/MASHLE-Kami-Shinkakusha-Kouho-Senbatsu-Shikenhen/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Bling Bang Bang Born**" <sup>[<a href="https://www.youtube.com/watch?v=210R0ozmLwg" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=mLW35YMzELE" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Shun Enokido, Creepy Nuts</li>
+
+    <li>The Dangers in My Heart S2 <sup>[<a href="https://myanimelist.net/anime/55690/Boku_no_Kokoro_no_Yabai_Yatsu_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166216/Boku-no-Kokoro-no-Yabai-Yatsu-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Boku wa**" <sup>[<a href="https://www.youtube.com/watch?v=A0tKGpKOU4Y" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=8L5cQlXMpeY" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Tetsuro Araki, Atarayo</li>
+
+    <li>You Are Ms. Servant <sup>[<a href="https://myanimelist.net/anime/57611/Kimi_wa_Meido-sama" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/172190/Kimi-wa-Meidosama/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Otozure**" <sup>[<a href="https://www.youtube.com/watch?v=AD4wjqCmC98" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=sg3wshbaQDQ" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Saho Nanjo, tricot</li>
+
+    <li>Dandadan <sup>[<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Otonoke**" <sup>[<a href="https://www.youtube.com/watch?v=Nw_XzGZ35As" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=tRwHpyOq4P4" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Abel Gongora, Creepy Nuts</li>
+
+    <li>Too Many Losing Heroines <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Tsuyogaru Girl**" <sup>[<a href="https://www.youtube.com/watch?v=7GJOBkIgWHc" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=AuRNbKRVV-Y" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Takayuki Kikuchi, Botchi Boromaru, Mossa</li>
+
+    <li>Na Nare Hana Nare <sup>[<a href="https://myanimelist.net/anime/57099/Na_Nare_Hana_Nare" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170891/NaNare-HanaNare/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Cheer For You**" <sup>[<a href="https://www.youtube.com/watch?v=BqKQFjoTyQY" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=Cm67VDCPKGk" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Koudai Kakimoto, PoMPoMs</li>
+
+    <li>Girls Band Cry <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Wrong World**" <sup>[<a href="https://www.youtube.com/watch?v=YDLafQ-Rg-k" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=MSmfAa_oSqE" target="_blank" rel="noopener noreferrer">Full</a>\]</sup> <br /> Kazuo Sakai, Togenashi Togeari</li>
+
+    <li>Beastars Final Season <sup>[<a href="https://myanimelist.net/anime/49469/Beastars_Final_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/136880/BEASTARS-FINAL-SEASON-Part-1/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Into the World**" <sup>[<a href="https://www.youtube.com/watch?v=gOTNI5smH2E" target="_blank" rel="noopener noreferrer">OP</a>]</sup> <br /> ORANGE, Satoru Kousaki</li>
+
+    <li>Yuru Camp S3 <sup>[<a href="https://myanimelist.net/anime/53410/Yuru_Camp△_Season_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155908/Yuru-Camp-SEASON-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Laid-Back Journey**" <sup>[<a href="https://www.youtube.com/watch?v=eMgHOf0rpBQ" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=_SXLsH7LSAY" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Shin Tosaka, Kaoru Futaki, Kiminone</li>
+
+    <li>Wind Breaker <sup>[<a href="https://myanimelist.net/anime/54900/Wind_Breaker" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163270/WIND-BREAKER/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Zettai Reido**" <sup>[<a href="https://www.youtube.com/watch?v=IuSAC8ZDf1A" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=LFoyXEFaz2Q" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Tomohisa Taguchi, Natori</li>
+
+    <li>The Magical Girl and the Evil Lieutenant Used to be Archenemies <sup>[<a href="https://myanimelist.net/anime/57217/Katsute_Mahou_Shoujo_to_Aku_wa_Tekitai_shiteita" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170938/Katsute-Mahou-Shoujo-to-Aku-wa-Tekitai-Shite-Ita/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup> <br /> "**Mikansei Rendezvous**" <sup>[<a href="https://www.youtube.com/watch?v=_RquZ0L9FBI" target="_blank" rel="noopener noreferrer">OP</a>]\[<a href="https://www.youtube.com/watch?v=ZmhTiLioEnI" target="_blank" rel="noopener noreferrer">Full MV</a>\]</sup> <br /> Akiyo Oohashi, Lezel</li>
+
+</ul>
+
+**Winners**
+
+- **People's Choice:** Dandadan, "Otonoke", Abel Gongora, Creepy Nuts
+- **Jury Choice:** Mashle S2, "Bling Bang Bang Born", Shun Enokido, Creepy Nuts
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-opening-peoples-choice.webp" />
+    <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/Nw_XzGZ35As" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/best-opening-jury-choice.webp" />
+    <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/210R0ozmLwg" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+
+</div>
+
+
 <hr className="my-0 mt-2 mb-4" />
